# ros-autonomous-laser-bot

./: .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  SETUP_CHECKLIST.md  SmoothControllers Template.py
catkin_ws/src/a2_world/: CMakeLists.txt  package.xml
catkin_ws/src/a2_world/launch/: all.launch  teleop.launch  world.launch
catkin_ws/src/a2_world/world/: autolab.world
catkin_ws/src/ros2/: CMakeLists.txt  package.xml
catkin_ws/src/ros2/scripts/: go_to_goal.py  smooth1.py  smooth1_tf.py  smooth2.py
docs/: ARCHITECTURE.md  CONTROLLERS.md  QUICK_START.md  README.md
