<?xml version="1.0"?>
<package>
  <name>a2_world</name>
  <version>1.0.0</version>
  <description>Stage simulation world package for ROS Laser Bot project. Contains the autolab world environment, robot models, and launch files for running the simulation.</description>

  <maintainer email="maintainer@example.com">ROS Laser Bot Maintainers</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/Shahrukh19S/ros-autonomous-laser-bot</url>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/a2_world</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>stage_ros</build_depend>
  <build_depend>turtlebot_teleop</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>turtlebot_teleop</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
